[package]
name = "euler"
version = "0.1.0"
authors = ["Pierre-Antoine Lacaze <pa.lacaze@laposte.net>"]

[dependencies]
ndarray = "0.6"
itertools = "0.5"
gmp = "0.3"
permutohedron = "0.2"
primal = "0.2"
rayon = "0.4"
time = "0.1"
petgraph = "0.2"
rand = "0.3"
num = "*"
enum_primitive = "*"
rulinalg = "0.2"

[profile.release]
# opt-level = 3
debug = true
# lto = true
